--- a/app/scss/modules/_mailinglist.scss
+++ b/app/scss/modules/_mailinglist.scss
@@ -32,7 +32,7 @@
 
 .mailing-list-caption {
   font-size: 17px;
-  line-height: 25.5px;
+  line-height: 1.6;
 }
 
 @media only screen {
@@ -54,7 +54,6 @@
 
   .mailing-list-text {
     float:left;
-    width: 40%;
     text-align: left;
   }
 
@@ -82,11 +81,6 @@
     margin-bottom: 5px;
     font-size: 24px;
     line-height: 24px;
-  }
-
-  .mailing-list-caption {
-    font-size: 15px;
-    line-height: 20px;
   }
 }
 @media only screen and (min-width: 920px) {
